first pass at findbugs bugs;no charsets for you, plugins