@@ -602,7 +602,7 @@ public class GeoWaveRasterReader extends
 			}
 		}
 		else {
-			imageChoice = new Integer(
+			imageChoice = Integer.valueOf(
 					0);
 		}
 
